{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 160,
  "lineage": "7e844797-e3b0-5ffc-fe76-82e0b85758a1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/natGateways/task-nat_gateway",
            "idle_timeout_in_minutes": 10,
            "location": "eastus",
            "name": "task-nat_gateway",
            "resource_group_name": "task-name",
            "resource_guid": "36a502ea-e905-40ad-9e9c-103481a702e1",
            "sku_name": "Standard",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkInterfaces/task-nic",
            "internal_domain_name_suffix": "t5fowtwzfmgevdmtvyytiiadce.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "task-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "task-name"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg",
            "location": "eastus",
            "name": "task-nsg",
            "resource_group_name": "task-name",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/publicIPAddresses/task-nat_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.25.8.119",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "task-nat_public_ip",
            "resource_group_name": "task-name",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/publicIPAddresses/task-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "task-pip",
            "resource_group_name": "task-name",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/routeTables/task-route_table",
            "location": "eastus",
            "name": "task-route_table",
            "resource_group_name": "task-name",
            "route": [
              {
                "address_prefix": "10.0.1.0/24",
                "name": "route1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "name": "route2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "name": "route3",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "name": "route4",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1",
              "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2",
              "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3",
              "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "task-name",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "task-name",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "task-name",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3",
            "name": "subnet3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "task-name",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4",
            "name": "subnet4",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "task-name",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/nat-subnet",
            "name": "nat-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "task-name",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "s1_nat_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1",
            "nat_gateway_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/natGateways/task-nat_gateway",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat_gateway",
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "s2_nat_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2",
            "nat_gateway_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/natGateways/task-nat_gateway",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat_gateway",
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "s3_nat_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3",
            "nat_gateway_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/natGateways/task-nat_gateway",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat_gateway",
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "s4_nat_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4",
            "nat_gateway_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/natGateways/task-nat_gateway",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat_gateway",
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet4",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "s1_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "s2_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2",
            "network_security_group_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "s3_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3",
            "network_security_group_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "s4_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4",
            "network_security_group_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.task",
            "azurerm_subnet.subnet4",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "s1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1",
            "route_table_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/routeTables/task-route_table",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_route_table.route_table",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "s2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2",
            "route_table_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/routeTables/task-route_table",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_route_table.route_table",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "s3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3",
            "route_table_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/routeTables/task-route_table",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_route_table.route_table",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "s4_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4",
            "route_table_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/routeTables/task-route_table",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4"
          },
          "dependencies": [
            "azurerm_resource_group.task",
            "azurerm_route_table.route_table",
            "azurerm_subnet.subnet4",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4eebca9f-2bd9-4a0c-8d93-ae3134200314",
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "eastus",
            "name": "vnet",
            "resource_group_name": "task-name",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet3",
                "name": "subnet3",
                "security_group": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet4",
                "name": "subnet4",
                "security_group": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/networkSecurityGroups/task-nsg"
              },
              {
                "address_prefix": "10.0.5.0/24",
                "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/nat-subnet",
                "name": "nat-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.6.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "20.25.9.236"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworkGateways/task-Vn_gateway",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/publicIPAddresses/task-pip",
                "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/task-name/providers/Microsoft.Network/virtualNetworks/vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "eastus",
            "name": "task-Vn_gateway",
            "private_ip_address_enabled": false,
            "resource_group_name": "task-name",
            "sku": "Basic",
            "type": "Vpn",
            "vpn_client_configuration": [
              {
                "address_space": [
                  "10.2.0.0/24"
                ],
                "revoked_certificate": [
                  {
                    "name": "Verizon-Global-Root-CA",
                    "thumbprint": "912198EEF23DCAC40939312FEE97DD560BAE49B1"
                  }
                ],
                "root_certificate": [
                  {
                    "name": "DigiCert-Federated-ID-Root-CA",
                    "public_cert_data": "MIIDuzCCAqOgAwIBAgIQCHTZWCM+IlfFIRXIvyKSrjANBgkqhkiG9w0BAQsFADBn\r\nMQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\r\nd3cuZGlnaWNlcnQuY29tMSYwJAYDVQQDEx1EaWdpQ2VydCBGZWRlcmF0ZWQgSUQg\r\nUm9vdCBDQTAeFw0xMzAxMTUxMjAwMDBaFw0zMzAxMTUxMjAwMDBaMGcxCzAJBgNV\r\nBAYTAlVTMRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdp\r\nY2VydC5jb20xJjAkBgNVBAMTHURpZ2lDZXJ0IEZlZGVyYXRlZCBJRCBSb290IENB\r\nMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvAEB4pc [...]
                  }
                ],
                "vpn_auth_types": [
                  "Certificate"
                ],
                "vpn_client_protocols": [
                  "SSTP"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.task",
            "azurerm_subnet.gateway_subnet",
            "azurerm_virtual_network.task"
          ]
        }
      ]
    }
  ]
}